--- a/GWorkspace/Resources/French.lproj/Localizable.strings
+++ b/GWorkspace/Resources/French.lproj/Localizable.strings
@@ -109,6 +109,17 @@
 "You have not write permission\nfor" = "Vous n'avez pas les droits d'écrire\npour";
 "Continue" = "Continuer";
 
+"File Viewer" = "File Viewer";
+
+"Quit!" = "Quit";
+"Do you really want to quit?" = "Do you really want to quit?";
+"Yes" = "Yes";
+"No" = "No";
+
+"Log out" = "Log out";
+"Are you sure you want to quit\nall applications and log out now?" = "Are you sure you want to quit\nall applications and log out now?";
+"If you do nothing, the system will log out\nautomatically in" = "If you do nothing, the system will log out\nautomatically in";
+"seconds." = "seconds.";
 
 /* FileOperation.m */
 
