--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-25 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Resources/English.lproj/DesktopPref.gorm
+	Resaved with base 1.24 version
+
 2012-04-16 Riccardo Mottola <rm@gnu.org>
 
 	* DBKit/DBKBTree.h
