use literal strings directly
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35200 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-13 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNTextCell.m
+	Use literal string directly
+
 2012-05-25 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Resources/English.lproj/DesktopPref.gorm
