Add missing include and fix warning.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35221 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-20 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewerShelf.m
+	Add missing include and fix warning.
+
 2012-06-13 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNTextCell.m
