Warning fix (NSUInteger).
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35222 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-21 Riccardo Mottola <rm@gnu.org>
+
+	* DBKit/DBKVarLenRecordsFile.m
+	* Tools/ddbd/DDBPathsManager.m
+	Warning fix (NSUInteger).
+
 2012-06-20 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewerShelf.m
