fix unsigned integer loop
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35664 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-10 Riccardo Mottola <rm@gnu.org>
+
+	* DBKit/DBKBTreeNode.m
+	Fix unsigned integer loop.
+
 2012-06-20: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 
 	* GWorkspace/Desktop/Dock/DockIcon.m
