--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-16 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNode.m
+	Fix size calculation bug.
+	
 2012-10-14 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfWin.m
