Fix issue where the Empty Recycler menu item was not enabled when GWorkspace is launched.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35976 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* GWorkspace/GWorkspace.m (-applicationWillFinishLaunching:,
+	(-fileSystemDidChange:, -watchedPathDidChange:, -_updateTrashContents):
+	Initialize trashContents attribute from actual trash contents and
+	avoid code duplication.
+
 2012-10-17 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/DDBMDStorage.m
