Change count variable from int to NSUInteger
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35980 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-01-15 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/Desktop/Dock/DockIcon.m
+	Change count variable from int to NSUInteger
+
 2013-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* GWorkspace/GWorkspace.m (-applicationWillFinishLaunching:,
