Initialize by returning self correctly
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@35985 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-16 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/TShelf/TShelfIcon.m
+	Initialize by returning self correctly.
+
 2013-01-15 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfWin.m (addTab, renameTab)
