--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-17 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/Attributes.m (activateForPaths:)
+	Cleanup and fix warning.
+
 2013-01-16 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfIcon.m
