--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-01-17 Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNBrowserColumn.m
+	Clean up and use NSUinteger for array indexes
+
+2013-01-17 Riccardo Mottola <rm@gnu.org>
+
 	* Inspector/Attributes.m (activateForPaths:)
 	Cleanup and fix warning.
 
