--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* FSNode/FSNBrowserColumn.m
 	Clean up and use NSUinteger for array indexes
 
+	* Inspector/Inspector.m
+	Fix memory leak.
+
 2013-01-17 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/Attributes.m (activateForPaths:)
