--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* Inspector/Inspector.m
 	Fix memory leak.
 
+	* FSNode/FSNIconsView.m
+	Fix pool leak.
+
 2013-01-17 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/Attributes.m (activateForPaths:)
