--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2013-01-17 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/Finder/SearchResults/SearchResults.m
+        * Inspector/Attributes.m
+	* Operation/FileOpInfo.m
+	* Tools/ddbd/ddbd.m
+	Fix warnings and leaks.
+
+2013-01-17 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNBrowserColumn.m
 	Clean up and use NSUinteger for array indexes
 
