--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-20 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/ddbd/ddbd.m (userMetadataForPath:, annotationsForPath:)
+	Do not retain returned value.
+
 2013-01-17 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Finder/SearchResults/SearchResults.m
