Fix warning and rewrite cycle cuinting upwards due to unsigned.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36010 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-21 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/TShelf/TShelfIconsView.m
+	Fix warning and rewrite cycle cuinting upwards due to unsigned.
+
 2013-01-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDKit/MDKQuery.m
