--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-25 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIcon.m
+	Fix ARP memory leak.
+	
 2012-01-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfIconsView.m
