Fix ARP memory leak
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36014 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNIcon.m
+	* GWorkspace/TShelf/TShelfIcon.m
 	Fix ARP memory leak.
-	
+
 2012-01-21 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfIconsView.m
