Do not use deallocated instance ivars
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36015 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
+	* DBKit/DBKitFixLenRecordsFile.m
+	Do not use deallocated instance ivars.
+
+2012-01-25 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNIcon.m
 	* GWorkspace/TShelf/TShelfIcon.m
 	Fix ARP memory leak.
