--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
+	* Tools/ddbd/ddbd.m
+	Fix memory leak by removing unnecessary retain to self.
+
+2012-01-25 Riccardo Mottola <rm@gnu.org>
+
 	* DBKit/DBKitFixLenRecordsFile.m
 	Do not use deallocated instance ivars.
 
