Simplify code and fix crash due to previous autorelease fix.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36027 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-27 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIcon.m
+	Simplify code and fix crash due to previous autorelease fix.
+
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/ddbd.m
