--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNIcon.m
+	* GWorkspace/TShelf/TShelfIcon.m
 	Simplify code and fix crash due to previous autorelease fix.
 
 2012-01-25 Riccardo Mottola <rm@gnu.org>
