* GWMetadata/gmds/gmds/gmds.m         * GWMetadata/gmds/mdextractor/mdextractor.m           shutup clang warning about constant strings in NSLog
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36067 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-02-07: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GWMetadata/gmds/gmds/gmds.m
+	* GWMetadata/gmds/mdextractor/mdextractor.m
+	  shutup clang warning about constant strings in NSLog
+
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNIcon.m
