* Tools/ddbd/DDBDirsManager.m         * Tools/ddbd/MDModules/MDModuleAnnotations/MDModuleAnnotations.m           even more shutup to clang
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36068 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 	* GWMetadata/gmds/gmds/gmds.m
 	* GWMetadata/gmds/mdextractor/mdextractor.m
 	  shutup clang warning about constant strings in NSLog
+	* Tools/ddbd/DDBDirsManager.m
+	* Tools/ddbd/MDModules/MDModuleAnnotations/MDModuleAnnotations.m
+	  even more shutup to clang
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
