Missed in last commit
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36069 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	  shutup clang warning about constant strings in NSLog
 	* Tools/ddbd/DDBDirsManager.m
 	* Tools/ddbd/MDModules/MDModuleAnnotations/MDModuleAnnotations.m
+	* Tools/ddbd/DDBPathsManager.m
 	  even more shutup to clang
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
