--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* Tools/ddbd/MDModules/MDModuleAnnotations/MDModuleAnnotations.m
 	* Tools/ddbd/DDBPathsManager.m
 	  even more shutup to clang
+	* GWorkspace/TShelf/TShelfIconsView.m
+	* Inspector/Attributes.h
+	  even more shutup to clang
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
