* FSNode/FSNBrowserColumn.m         * FSNode/FSNBrowserMatrix.m         * (unsigned) int to NS(U)Integer conversion
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36071 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
 	* GWorkspace/TShelf/TShelfIconsView.m
 	* Inspector/Attributes.h
 	  even more shutup to clang
+	* FSNode/FSNBrowserColumn.m
+	* FSNode/FSNBrowserMatrix.m
+	* (unsigned) int to NS(U)Integer conversion
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
