--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
 	* FSNode/FSNBrowserColumn.m
 	* FSNode/FSNBrowserMatrix.m
 	* (unsigned) int to NS(U)Integer conversion
+	* GWMetadata/Preferences/MDIndexing.m
+	  more (unsigned) int to NS(U)Integer conversion
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
