* GWorkspace/Desktop/Dock/DockIcon.m         * Inspector/Attributes.m         * remove unused variables
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36073 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@
 	* (unsigned) int to NS(U)Integer conversion
 	* GWMetadata/Preferences/MDIndexing.m
 	  more (unsigned) int to NS(U)Integer conversion
+	* GWorkspace/Desktop/Dock/DockIcon.m
+	* Inspector/Attributes.m
+	* remove unused variables
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
