--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,9 @@
 	* GWorkspace/Desktop/GWDesktopWindow.m
 	* GWorkspace/Desktop/XBundles/XDesktopWindow/XDesktopWindow.m
 	  more (unsigned) int to NS(U)Integer conversion
+	* GWorkspace/FileViewer/GWViewerBrowser.m
+	* GWorkspace/FileViewer/GWViewerSplit.m
+	  more (unsigned) int to NS(U)Integer conversion
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
