* GWorkspace/Finder/LiveSearch/LSFolder.m         * GWorkspace/Finder/Finder.m         * GWorkspace/Finder/SearchResults/SearchResults.m           more (unsigned) int to NS(U)Integer conversion
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36076 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,10 @@
 	* GWorkspace/FileViewer/GWViewerBrowser.m
 	* GWorkspace/FileViewer/GWViewerSplit.m
 	  more (unsigned) int to NS(U)Integer conversion
+	* GWorkspace/Finder/LiveSearch/LSFolder.m
+	* GWorkspace/Finder/Finder.m
+	* GWorkspace/Finder/SearchResults/SearchResults.m
+	  more (unsigned) int to NS(U)Integer conversion
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
