* GWorkspace/History/History.m         * GWorkspace/Preferences/DesktopPref.m         * GWorkspace/Preferences/HiddenFilesPref.m           more (unsigned) int to NS(U)Integer conversion
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36077 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,10 @@
 	* GWorkspace/Finder/Finder.m
 	* GWorkspace/Finder/SearchResults/SearchResults.m
 	  more (unsigned) int to NS(U)Integer conversion
+	* GWorkspace/History/History.m
+	* GWorkspace/Preferences/DesktopPref.m
+	* GWorkspace/Preferences/HiddenFilesPref.m
+	  more (unsigned) int to NS(U)Integer conversion
 
 2012-01-27 Riccardo Mottola <rm@gnu.org>
 
