--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-08 Riccardo Mottola
+
+	* GWMetadata/Preferences/Resources/English.lproj/MDIndexing.gorm/
+	Slight cleanup
+
 2012-03-07 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDKit/SQLite.h (finalize)
