* GWMetadata/MDFinder/MDFinder.m         * Recycler/Recycler.m           move to newer API for applicationShouldTerminate
OK Riccardo



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36087 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GWMetadata/MDFinder/MDFinder.m
+	* Recycler/Recycler.m
+	  move to newer API for applicationShouldTerminate
+
 2013-02-08 Riccardo Mottola
 
 	* GWorkspace/Fiend/Fiend.m (renameCurrentLayer, addLayer)
