--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-12 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/Preferences/MDIndexing.m
+	Transition to CGFloat and NSUInteger.
+
 2013-02-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GWMetadata/MDFinder/MDFinder.m
 	* Recycler/Recycler.m
