Rename DATE to DATE_TYPE to avoid typdef conlfict on windows
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36124 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-02-13 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDKit/MDKQuery.[h,m]
+	* GWMetadata/MDKit/MDKAttributeEditor.m
+	* GWMetadata/MDKit/MKDAttributeChooser.m
+	* GWMetadata/gmds/gmds/gmds.m
+	Rename DATE to DATE_TYPE to avoid conflict on windows with wtypes.h
+	
 2013-02-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/TShelf/TShelfPBIcon.[h,m]:
