CGFloat and NSUInteger transition
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36130 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-14 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/FileViewer/GWViewer.m
+	CGFloat and NSUInteger transition.
+
 2013-02-13 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/Preferences/MDIndexing.m (isDotFile)
