--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/TShelf/TShelfIconsView.m
+	CGFloat and NSUInteger transition.
+
+2013-02-14 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/FileViewer/GWViewer.m
 	CGFloat and NSUInteger transition.
 
