Change NSDragOperationAll to NSDragOperationEvery
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36138 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,15 @@
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/TShelf/TShelfIcon.m
+	* GWorkspace/TShelf/TShelfIconsView.m
+	* GWorkspace/TShelf/TShelfPBIcon.m
+	Change NSDragOperationAll to NSDragOperationEvery
+
+2013-02-14 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/FileViewer/GWViewer.m
 	CGFloat and NSUInteger transition.
-	
+
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNBrowserCell.h
