Make sure the user Library dir exists
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36139 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNodeRep.m
+	Make sure the user Library dir exists
+
+2013-02-14 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/TShelf/TShelfIcon.m
 	* GWorkspace/TShelf/TShelfIconsView.m
 	* GWorkspace/TShelf/TShelfPBIcon.m
