Do not release the connection obtained with defaultConnection
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36161 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-17 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/ddbd/ddbd.m
+	Do not release the connection obtained with defaultConnection
+
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
