--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-02-20 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDKit/MDKWindow.h
+	* GWMetadata/MDKit/MDKWindow.m
+	NSInteger, NSUInteger and CGFloat transition
+
 2013-02-17 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/ddbd.m
