Fix exit condition
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36174 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,10 @@
 
 	* FSNode/FSNodeRep.m
 	Make sure the user Library dir exists
+2013-02-20 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/Preferences/MDIndexing.m (isDotFile)
+	Fix exit condition.
 
 2013-02-14 Riccardo Mottola <rm@gnu.org>
 
