--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-02-21 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/ddbd/DDBPathsManager.m
+	* Tools/ddbd/ddbd.m
+	Remove unneeded creation of autorelease pools or in case move them to the respective manager only.
+
 2013-02-20 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDKit/MDKWindow.m (isDotFile)
