Reuse already saved value
OK Riccardo



git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36186 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-22 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* Tools/ddbd/ddbd.m
+	reuse values already saved in args
+
 2013-02-21 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/ddbd.m
