--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-28 Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDKit/MDKResultCell.m
+	Remove unused variable.
+
 2013-02-22 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* Tools/ddbd/ddbd.m
 	reuse values already saved in args
