Clean up subtask creating and passed arguments, remove special --from-gmds parameter and rely only on --daemon.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36202 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-02-28 Riccardo Mottola <rm@gnu.org>
 
+	* GWMetadata/gmds/gmds/gmds.m
+	Clean up subtask creating and passed arguments, remove special
+	"--from-gmds" parameter and rely only on --daemon.
+
+2013-02-28 Riccardo Mottola <rm@gnu.org>
+
 	* GWMetadata/MDKit/MDKResultCell.m
 	Remove unused variable.
 
