Fix warnings about not implemented protocols.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36254 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-04 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNIconsView.h
+	* FSNode/FSNListView.h
+	Fix warnings about not implemented protocols.
+
 2013-02-28 Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/gmds/gmds/gmds.m
