--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-04 Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNListView.h
+	NSUInteger and NSInteger transition.
+
+2013-03-04 Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNIconsView.h
 	* FSNode/FSNListView.h
 	Fix warnings about not implemented protocols.
