--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-06 Riccardo Mottola <rm@gnu.org>
+
+	* Tools/fswatcher/fswatcher.m
+	Handle is_auto and is_daemon like gdnc.
+
 2013-03-04 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNListView.h
