Always shut down the Recycler on exit.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36285 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-06 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWorkspace.m
+	Always shut down the Recycler on exit.
+
+2013-03-06 Riccardo Mottola <rm@gnu.org>
+
 	* Tools/fswatcher/fswatcher.m
 	Handle is_auto and is_daemon like gdnc.
 
