Replace with version of MDIndexing
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36290 72102866-910b-0410-8b05-ffd578937521

--- a/TODO
+++ b/TODO
@@ -7,3 +7,7 @@
 7- fix dameons and recycler under NetBSD
 8- on icon click, if no fileviewer exists, a new one should be created like on mac
 9- check ddbd connection died messages
+10- check for code duplication (isDotFile everywhere)
+11- make Dock placeable on all screen borders
+12- make "classic" theme for dock draw real icons
+13- make dock display real icons
