Shut down the recycler after removign the connection observer.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36300 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-08 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	Shut down the recycler after removign the connection observer.
+
 2013-03-06 Riccardo Mottola <rm@gnu.org>
 
 	* Tools/fswatcher/fswatcher.m (isDotFile)
