--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2013-03-08 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
+	Trap exception.
+
+2013-03-08 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
 	Shut down the recycler after removign the connection observer.
 
 2013-03-06 Riccardo Mottola <rm@gnu.org>
