Set the Finder to selection only to directories and not files.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36309 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-08 Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWorkspace.m (setSelectedPaths)
+	Set the Finder to selection only to directories and not files.
+
+2013-03-08 Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/GWorkspace.m
 	Trap exception.
 
