--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-09 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Finder/Finder.m
+	NSUInteger transition.
+
 2013-03-08 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m (setSelectedPaths)
