--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-03-10 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* Tools/searchtool/searchtool.m
+	  Indentation
+
 2013-03-09 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Finder/Finder.m
